--- a/traefik/traefik.yaml
+++ b/traefik/traefik.yaml
@@ -68,15 +68,15 @@ storage:
 #          [ipv4]
 #          addresses=192.168.1.10/24
 #          method=auto
-    # See https://www.freedesktop.org/software/systemd/man/systemd-system.conf.html#DefaultEnvironment=
     - path: /etc/systemd/system.conf.d/10-default-env.conf
       mode: 0644
       contents:
-        inline: |
-          [Manager]
-          DefaultEnvironment="etcd_client_addresses=https://etcd-1.local:2379,https://etcd-2.local:2379,https://etcd-3.local:2379"
-          DefaultEnvironment="app_name=traefik"
-          DefaultEnvironment="app_container=traefik:2.5"
+        local: systemd/default-environment.conf
+    - path: /etc/systemd/system.conf.d/11-default-env.conf
+      append:
+        - inline: |
+            [Manager]
+            DefaultEnvironment="traefik_container=traefik:2.8"
     - path: /etc/zincati/config.d/51-rollout-wariness.toml
       contents:
         inline: |
@@ -276,7 +276,7 @@ systemd:
         [Service]
         Type=oneshot
         RemainAfterExit=yes
-        ExecStart=-/bin/docker network create --driver bridge --subnet=172.28.0.0/16 "app-default-net"
+        ExecStart=-/bin/docker network create --driver bridge --subnet=172.28.0.0/16 "${app_network}"
     - name: docker-traefik.service
       enabled: true
       contents: |
@@ -289,11 +289,11 @@ systemd:
         WantedBy=multi-user.target
         [Service]
         TimeoutStartSec=600
-        ExecStartPre=/bin/docker pull "${app_container}"
+        ExecStartPre=/bin/docker pull "${traefik_container}"
         ExecStartPre=-/bin/docker stop %N
         ExecStartPre=-/bin/docker rm %N
         ExecStart=/bin/docker run --name %N --hostname %N \
-          --network "app-default-net" \
+          --network "${app_network}" \
           --log-driver=json-file \
           --log-opt max-size=20m \
           --log-opt max-file=7 \
@@ -302,7 +302,7 @@ systemd:
           -v /var/app/traefik/configuration:/configuration:z \
           -v /var/app/data/certs:/certs:z \
           -v /var/app/data/traefik/acme:/acme:Z \
-          "${app_container}"
+          "${traefik_container}"
         ExecStop=/bin/docker stop %N
 passwd:
   users:
