Refactor project to use FCOS 1.5.0 local embed syntax
- add more long form shell parameters for e.g. curl to improve readability
- rename butane yaml files to make it clearer what they are
- add butane to verify pipeline to test the butane files in CI/CD fashion
- add test script to verify butane transpilation
- remove unused/not working 'user signing key' from script parameters
- fix gpg signature checks (importing the keys is mandatory for this to work
  as expected/without error)

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -6,6 +6,10 @@ on: [ push, pull_request ]
 permissions:
   contents: read
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   verify:
     runs-on: ubuntu-latest
@@ -23,3 +27,24 @@ jobs:
           yamllint .
       - uses: bewuethr/shellcheck-action@v2
       - uses: DavidAnson/markdownlint-cli2-action@v9
+      - name: Install butane
+        run: |
+          curl --fail --silent --show-error \
+            --location "https://github.com/coreos/butane/releases/download/v${butane_version}/butane-x86_64-unknown-linux-gnu" \
+            --output "butane"
+          curl --fail --silent --show-error \
+            --location "https://github.com/coreos/butane/releases/download/v${butane_version}/butane-x86_64-unknown-linux-gnu.asc" \
+            --output "butane.asc"
+          curl --silent --show-error "https://getfedora.org/static/fedora.gpg" --output "fedora.gpg"
+          gpg --import "fedora.gpg"
+          gpg --verify "butane.asc" "butane"
+          mv "butane" "/usr/local/bin/butane"
+          chmod +x "/usr/local/bin/butane"
+        env:
+          butane_version: "0.18.0"
+      - name: Run butane
+        run: |
+          find . -type f -name "*.bu.yaml" -o -name "*.bu.yml" | while read -r file; do
+            echo "verifying ${file}"
+            ./scripts/test.sh --bu-file "${file}"
+          done
