--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -35,7 +35,7 @@ jobs:
           curl --fail --silent --show-error \
             --location "https://github.com/coreos/butane/releases/download/v${butane_version}/butane-x86_64-unknown-linux-gnu.asc" \
             --output "butane.asc"
-          curl --silent --show-error "https://getfedora.org/static/fedora.gpg" --output "fedora.gpg"
+          curl --silent --show-error "https://fedoraproject.org/fedora.gpg" --output "fedora.gpg"
           gpg --import "fedora.gpg"
           gpg --verify "butane.asc" "butane"
           mv "butane" "/usr/local/bin/butane"
