--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -1,7 +1,7 @@
 name: Verify
 
 # yamllint disable-line rule:truthy
-on: [ push, pull_request ]
+on: [ push, pull_request, workflow_dispatch ]
 
 permissions:
   contents: read
@@ -20,7 +20,7 @@ jobs:
           go-version: '1.21'
       - name: Run EditorConfig Checker
         run: |
-          go run github.com/editorconfig-checker/editorconfig-checker/cmd/editorconfig-checker@2.7.1 --exclude .git
+          go run github.com/editorconfig-checker/editorconfig-checker/cmd/editorconfig-checker@2.7.2 --exclude .git
       - name: Run yamllint
         run: |
           pip install yamllint
@@ -41,7 +41,7 @@ jobs:
           mv "butane" "/usr/local/bin/butane"
           chmod +x "/usr/local/bin/butane"
         env:
-          butane_version: "0.18.0"
+          butane_version: "0.19.0"
       - name: Run butane
         run: |
           find . -type f -name "*.bu.yaml" -o -name "*.bu.yml" | while read -r file; do
