--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -15,17 +15,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        with:
-          go-version: '1.21'
       - name: Run EditorConfig Checker
         run: |
-          go run github.com/editorconfig-checker/editorconfig-checker/v2/cmd/editorconfig-checker@2.8.0 --exclude .git
+          curl --fail --silent --show-error --location --output ec.tar.gz \
+          https://github.com/editorconfig-checker/editorconfig-checker/releases/download/v3.0.0/ec-linux-amd64.tar.gz
+          tar -xzf ec.tar.gz
+          chmod +x ./bin/ec-linux-amd64
+          ./bin/ec-linux-amd64 --exclude .git
       - name: Run yamllint
         run: |
           pip install yamllint
           yamllint .
-      - uses: bewuethr/shellcheck-action@v2
+      - uses: ludeeus/action-shellcheck@2.0.0
       - uses: DavidAnson/markdownlint-cli2-action@v15
       - name: Install butane
         run: |
@@ -41,7 +42,7 @@ jobs:
           mv "butane" "/usr/local/bin/butane"
           chmod +x "/usr/local/bin/butane"
         env:
-          butane_version: 'v0.19.0'
+          butane_version: 'v0.20.0'
       - name: Run butane
         run: |
           find . -type f -name "*.bu.yaml" -o -name "*.bu.yml" | while read -r file; do
