--- a/hello-world/includes/traefik/configuration/http.toml
+++ b/hello-world/includes/traefik/configuration/http.toml
@@ -3,7 +3,7 @@
 		scheme = "https"
 		permanent = true
 		port = 443
-	[http.middlewares.is-whitelisted.ipWhiteList]
+	[http.middlewares.is-whitelisted.IPAllowList]
 		sourceRange = ["127.0.0.0/8", "10.0.0.0/8", "172.16.0.0/12", "192.168.0.0/16"]
 	[http.middlewares.compress-response.compress]
 
