--- a/common/systemd/docker-app-ingress.service
+++ b/common/systemd/docker-app-ingress.service
@@ -5,7 +5,7 @@ Requires=docker.service docker-app.service
 After=docker.service docker-app.service
 
 [Service]
-Environment="app_ingress_container=traefik:2.11"
+Environment="app_ingress_container=traefik:v3.0"
 TimeoutStartSec=600
 ExecStartPre=-/bin/docker pull "${app_ingress_container}"
 ExecStartPre=-/bin/docker stop %N
