--- a/hello-world/hello-world.bu.yaml
+++ b/hello-world/hello-world.bu.yaml
@@ -76,11 +76,7 @@ storage:
       append:
         - inline: |
             [Manager]
-            DefaultEnvironment="app_name=hello-world"
-            DefaultEnvironment="app_container=mendhak/http-https-echo:30"
-            DefaultEnvironment="app_domain=hello-world.example.org"
-            DefaultEnvironment="app_domain_internal=hello-world.local"
-            DefaultEnvironment="traefik_container=traefik:2.11"
+            DefaultEnvironment="traefik_container=traefik:v3.0"
     - path: /etc/zincati/config.d/51-rollout-wariness.toml
       contents:
         inline: |
