--- a/.editorconfig
+++ b/.editorconfig
@@ -12,12 +12,29 @@ indent_style = tab # https://old.reddit.com/r/javascript/comments/c8drjo/nobody_
 indent_size = tab
 trim_trailing_whitespace = true
 
-[*.{pub,secret}]
-insert_final_newline = false
-
-[*.{bu,json,md,yaml,yml}]
+[*.{tf,md,yaml,yml}]
 indent_style = space
 indent_size = 2
 
 [*.md]
-max_line_length = 120
+# For Markdown additional rules _could_ be enforced here (see below), however,
+# that is done using markdown-cli2 where violations can be handled more fine-granular
+#max_line_length = 120
+trim_trailing_whitespace = false # Allow '  ' token for Markdown to create new lines
+
+# For YAML additional rules _could_ be enforced here (see below), however,
+# that is done using yamllint where violations can be handled more fine-granular
+#[*.{yaml,yml}]
+#max_line_length = 140
+
+# Add custom rules below
+
+# Required for locally handling simple-ca files
+# See https://github.com/horaios/simple-file-ca
+# These files will be locally moved around the file system and must not be touched
+[*.{pub,secret}]
+insert_final_newline = false
+
+[*.{bu,json}]
+indent_style = space
+indent_size = 2
